Add Message of the Day archive and update index for improved navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="utf-8"/>
   <title>New Horizons — War Log & Podcast Hub</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=de      <section class="card">
+        <h2>🎙️ Suggested Listening Order</h2>
+        <ol>
+          <li><a href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html">Field Broadcast: "Teamwork, Beasts & Battle Lines"</a></li>
+          <li><a href="Podcast_Transcript.html">Transcript — Latest Session</a></li>
+          <li><a href="archive/index.html">Archive — Pre‑Acheron adventures</a></li>
+        </ol>
+        <p class="muted">Using ElevenLabs Studio "Podcast": you can upload the transcript page directly, assign hosts, edit timing, and export.</p>
+      </section>
+
+      <section class="card">
+        <h2>📜 Message Archive</h2>
+        <p class="muted">Historical Messages of the Day — battlefield reports and tactical briefings from key campaign moments.</p>
+        <p>
+          <a class="btn" href="history/index.html">
+            📅 <strong>View Message History</strong> — Campaign MOTD Archive
+          </a>
+        </p>
+        <details style="margin-top: 1rem;">
+          <summary>Latest: "The Aftershock" (July 21, 2025)</summary>
+          <p class="muted" style="margin-top: .5rem;">The crystal is broken. The conduit silenced. When Terry released the Irionite's grip, the instability began immediately. Ernie moved fast. Too fast...</p>
+          <p><a href="history/07-21-2025-motd.html">→ Read full message</a></p>
+        </details>
+      </section>h, initial-scale=1"/>
 
   <!-- Inline styles so the page works anywhere you drop it -->
   <style>
@@ -67,6 +90,7 @@
         <a href="#warbrief">🛡️ War Brief</a>
         <a href="#stats">📊 Battle Stats</a>
         <a href="#log">📝 History</a>
+        <a href="history/index.html">📜 Messages</a>
         <a href="archive/index.html">🗄️ Archive</a>
       </nav>
     </div>
