--- a/index.html
+++ b/index.html
@@ -3,30 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>New Horizons — War Log & Podcast Hub</title>
-  <meta name="viewport" content="width=de      <section class="card">
-        <h2>🎙️ Suggested Listening Order</h2>
-        <ol>
-          <li><a href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html">Field Broadcast: "Teamwork, Beasts & Battle Lines"</a></li>
-          <li><a href="Podcast_Transcript.html">Transcript — Latest Session</a></li>
-          <li><a href="archive/index.html">Archive — Pre‑Acheron adventures</a></li>
-        </ol>
-        <p class="muted">Using ElevenLabs Studio "Podcast": you can upload the transcript page directly, assign hosts, edit timing, and export.</p>
-      </section>
-
-      <section class="card">
-        <h2>📜 Message Archive</h2>
-        <p class="muted">Historical Messages of the Day — battlefield reports and tactical briefings from key campaign moments.</p>
-        <p>
-          <a class="btn" href="history/index.html">
-            📅 <strong>View Message History</strong> — Campaign MOTD Archive
-          </a>
-        </p>
-        <details style="margin-top: 1rem;">
-          <summary>Latest: "The Aftershock" (July 21, 2025)</summary>
-          <p class="muted" style="margin-top: .5rem;">The crystal is broken. The conduit silenced. When Terry released the Irionite's grip, the instability began immediately. Ernie moved fast. Too fast...</p>
-          <p><a href="history/07-21-2025-motd.html">→ Read full message</a></p>
-        </details>
-      </section>h, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <!-- Inline styles so the page works anywhere you drop it -->
   <style>
@@ -100,18 +77,18 @@
     <div class="grid">
       <!-- LEFT COLUMN -->
       <section class="card" id="podcast">
-        <h2>🎧 Podcast Highlight — “Teamwork, Beasts & Battle Lines”</h2>
+        <h2>🎧 Podcast Highlight — "Teamwork, Beasts & Battle Lines"</h2>
         <p class="muted">Hear the recap as if broadcast from a field tent beside the Red Keep.</p>
         <p>
           <!-- Replace these with your live host URLs when ready -->
           <a class="btn" href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html">
-            ▶️ <strong>Play Latest Episode</strong> (MP3)
+            ▶️ <strong>Play Latest Episode</strong> (HTML Player)
           </a>
         </p>
         <p>
           <a class="btn" href="Podcast_Transcript.html">📝 View Transcript (GenFM‑ready)</a>
         </p>
-        <p class="muted">Using ElevenLabs Studio → “Podcast”? Upload the transcript page above or paste its URL, then pick your hosts and export.</p>
+        <p class="muted">Using ElevenLabs Studio → "Podcast"? Upload the transcript page above or paste its URL, then pick your hosts and export.</p>
       </section>
 
       <aside class="card" id="warbrief">
@@ -121,7 +98,7 @@
             <p class="muted">Current theatre</p>
             <ul class="clean">
               <li class="row"><span>Base</span><span class="mono">Red Keep (Church of Reclamation)</span></li>
-              <li class="row"><span>Objective</span><span class="mono">Pressure Lion’s Gate, secure passage</span></li>
+              <li class="row"><span>Objective</span><span class="mono">Pressure Lion's Gate, secure passage</span></li>
               <li class="row"><span>Allies</span><span class="mono good">Spirewatch Archers • Emberline Breaker • Formacid Skirmisher</span></li>
               <li class="row"><span>Wildcard</span><span class="mono warn">Behir (briefly swayed; later hostile until hypnotized)</span></li>
             </ul>
@@ -159,8 +136,8 @@
         <details style="margin-top:.75rem">
           <summary>Open tactical notes (light spoilers)</summary>
           <ul>
-            <li><strong>Archers’ Tag the Mark</strong> reliably set up ally attacks with +1 to hit windows.</li>
-            <li><strong>Thunderdrum</strong> leveraged Thief’s Reflexes for early pressure and repeated Sneak burst.</li>
+            <li><strong>Archers' Tag the Mark</strong> reliably set up ally attacks with +1 to hit windows.</li>
+            <li><strong>Thunderdrum</strong> leveraged Thief's Reflexes for early pressure and repeated Sneak burst.</li>
             <li><strong>Terry (Breaker/Skirmisher)</strong> chained Smash‑Hammer and Chitin Blades to chew through beasts; handled grapples under fire.</li>
             <li><strong>Shrop (Templar)</strong> landed consistent Relic Blade strikes and confirmed a key Butcher kill.</li>
             <li><strong>Behir</strong> flipped alignment mid‑fray; ultimately neutralized via <em>Hypnotic Gaze</em> before breathing again later.</li>
@@ -174,7 +151,7 @@
         <ul>
           <li>Arrival at the Red Keep; coordination with defenders.</li>
           <li>Murder‑mystery concluded; the corrupted cook was dealt with.</li>
-          <li>Staging for Lion’s Gate began; forward raids planned.</li>
+          <li>Staging for Lion's Gate began; forward raids planned.</li>
           <li><strong>Raid Progress:</strong> Room One — cleared.</li>
           <li><strong>Raid Progress:</strong> Room Two — cleared.</li>
           <li><strong>Raid Progress:</strong> Room Three — cleared (latest checkpoint).</li>
@@ -186,11 +163,26 @@
       <section class="card">
         <h2>🎙️ Suggested Listening Order</h2>
         <ol>
-          <li><a href="Podcast_Transcript.html">Field Broadcast: “Teamwork, Beasts & Battle Lines”</a></li>
-          <li><a href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.mp3">Audio Cut — Latest Session</a></li>
+          <li><a href="ElevenLabs_Masterclass_in_Teamwork_Battling_Beasts_and_Strategy.html">Field Broadcast: "Teamwork, Beasts & Battle Lines"</a></li>
+          <li><a href="Podcast_Transcript.html">Transcript — Latest Session</a></li>
           <li><a href="archive/index.html">Archive — Pre‑Acheron adventures</a></li>
         </ol>
-        <p class="muted">Using ElevenLabs Studio “Podcast”: you can upload the transcript page directly, assign hosts, edit timing, and export.</p>
+        <p class="muted">Using ElevenLabs Studio "Podcast": you can upload the transcript page directly, assign hosts, edit timing, and export.</p>
+      </section>
+
+      <section class="card">
+        <h2>📜 Message Archive</h2>
+        <p class="muted">Historical Messages of the Day — battlefield reports and tactical briefings from key campaign moments.</p>
+        <p>
+          <a class="btn" href="history/index.html">
+            📅 <strong>View Message History</strong> — Campaign MOTD Archive
+          </a>
+        </p>
+        <details style="margin-top: 1rem;">
+          <summary>Latest: "The Aftershock" (July 21, 2025)</summary>
+          <p class="muted" style="margin-top: .5rem;">The crystal is broken. The conduit silenced. When Terry released the Irionite's grip, the instability began immediately. Ernie moved fast. Too fast...</p>
+          <p><a href="history/07-21-2025-motd.html">→ Read full message</a></p>
+        </details>
       </section>
 
       <aside class="card">
@@ -198,8 +190,8 @@
         <ul class="clean">
           <li class="row"><span>Allies on field</span><span class="mono good">Breakers • Skirmishers • Spirewatch Archers</span></li>
           <li class="row"><span>Notable foes</span><span class="mono bad">Beast‑Handler Butchers (multiple)</span></li>
-          <li class="row"><span>Wild surge</span><span class="mono warn">Behir’s Lightning Breath & constrict/grapple plays</span></li>
-          <li class="row"><span>Control moment</span><span class="mono">Grimbledee’s Hypnotic Gaze to pause the Behir</span></li>
+          <li class="row"><span>Wild surge</span><span class="mono warn">Behir's Lightning Breath & constrict/grapple plays</span></li>
+          <li class="row"><span>Control moment</span><span class="mono">Grimbledee's Hypnotic Gaze to pause the Behir</span></li>
         </ul>
       </aside>
     </div>
@@ -207,7 +199,7 @@
 
   <footer>
     <div class="wrap">
-      <p class="muted">© Campaign Chronicles — “New Horizons” arc. Public page is spoiler‑safe; internal notebooks remain GM‑side.</p>
+      <p class="muted">© Campaign Chronicles — "New Horizons" arc. Public page is spoiler‑safe; internal notebooks remain GM‑side.</p>
       <p class="muted">Tip: drop this file at your host root. If you change your audio host, just swap the links in the Podcast section.</p>
     </div>
   </footer>
